--- a/index.html
+++ b/index.html
@@ -37,7 +37,56 @@
           </nav>
     </div>
 
+    <div class="container">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col-md-7">
+                    <h1>Mega LCD TV For Sports</h1>
+                    <p>THis is the best TV in the world for people who just want to waste time in front of TV.</p>
+                    <h1>$1200</h1>
+                    <button class="buy-now-button">Buy Now</button>
+                  </div>
+                  <div class="col-md-5">
+                      <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                  </div>
+                </div> 
+              </div> 
+              <div class="carousel-item">
+                  <div class="row">
+                      <div class="col-md-7">
+                        <h1>Mega LCD TV For Sports</h1>
+                        <p>THis is the best TV in the world for people who just want to waste time in front of TV.</p>
+                        <h1>$1200</h1>
+                        <button class="buy-now-button">Buy Now</button>
+                      </div>
 
+                      <div class="col-md-5">
+                        <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="row">
+                      <div class="col-md-7"></div>
+
+                      <div class="col-md-5">
+                        <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </div>
 
 
 
