--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="container">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleControls" class="carousel slide orange-bg" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="row">
@@ -51,7 +51,7 @@
                   <div class="col-md-5">
                       <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                   </div>
-                </div> 
+                </div>
               </div> 
               <div class="carousel-item">
                   <div class="row">
@@ -69,7 +69,12 @@
               </div>
               <div class="carousel-item">
                   <div class="row">
-                      <div class="col-md-7"></div>
+                      <div class="col-md-7">
+                        <h1>Mega LCD TV For Sports</h1>
+                        <p>THis is the best TV in the world for people who just want to waste time in front of TV.</p>
+                        <h1>$1200</h1>
+                        <button class="buy-now-button">Buy Now</button>
+                      </div>
 
                       <div class="col-md-5">
                         <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
