--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="carouselExampleControls" class="carousel slide orange-bg" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <div class="row">
+                <div class="row align-items-center">
                   <div class="col-md-7">
                     <h1>Mega LCD TV For Sports</h1>
                     <p>THis is the best TV in the world for people who just want to waste time in front of TV.</p>
