--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
               </div> 
               <div class="carousel-item">
-                  <div class="row">
+                  <div class="row align-items-center">
                       <div class="col-md-7">
                         <h1>Mega LCD TV For Sports</h1>
                         <p>THis is the best TV in the world for people who just want to waste time in front of TV.</p>
@@ -68,7 +68,7 @@
                     </div>
               </div>
               <div class="carousel-item">
-                  <div class="row">
+                  <div class="row align-items-center">
                       <div class="col-md-7">
                         <h1>Mega LCD TV For Sports</h1>
                         <p>THis is the best TV in the world for people who just want to waste time in front of TV.</p>
