--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <div class="col-md-7">
                     <h1>Mega LCD TV For Sports</h1>
                     <p>THis is the best TV in the world for people who just want to waste time in front of TV.</p>
-                    <h1>$1200</h1>
+                    <h1 class="price">$1200</h1>
                     <button class="buy-now-button">Buy Now</button>
                   </div>
                   <div class="col-md-5">
@@ -58,7 +58,7 @@
                       <div class="col-md-7">
                         <h1>Mega LCD TV For Sports</h1>
                         <p>THis is the best TV in the world for people who just want to waste time in front of TV.</p>
-                        <h1>$1200</h1>
+                        <h1 class="price">$1200</h1>
                         <button class="buy-now-button">Buy Now</button>
                       </div>
 
@@ -72,7 +72,7 @@
                       <div class="col-md-7">
                         <h1>Mega LCD TV For Sports</h1>
                         <p>THis is the best TV in the world for people who just want to waste time in front of TV.</p>
-                        <h1>$1200</h1>
+                        <h1 class="price">$1200</h1>
                         <button class="buy-now-button">Buy Now</button>
                       </div>
 
