--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <div class="carousel-item">
                   <div class="row align-items-center">
                       <div class="col-md-7">
-                        <h1>Mega LCD TV For Sports</h1>
+                        <h1>Cool dude headphone</h1>
                         <p>THis is the best TV in the world for people who just want to waste time in front of TV.</p>
                         <h1 class="price">$1200</h1>
                         <button class="buy-now-button">Buy Now</button>
